--- a/about.html
+++ b/about.html
@@ -4,5 +4,5 @@ title: About
 image: /images/blog/mystery.png
 ---
 
-<p>Lorem ipsum dolor sit amet.</p>
-<p> Good luck.</p>
+<p>I am currently completing my Masters of Analytics at the University of San Francisco while working as a Data Scientist at Capital One Labs.</p>
+<p> </p>
