--- a/about.html
+++ b/about.html
@@ -4,5 +4,7 @@ title: About
 image: /images/blog/mystery.png
 ---
 
-<p>I am currently completing my Masters of Analytics at the University of San Francisco while working as a Data Scientist at Capital One Labs.</p>
+<p>I spent the first seventeen years of my life in the dirt: Saudi Arabia, Bahrain, Qatar. Following my 
+undergraduate degree where I majored in Computer Science and Molecular Biology & Biochemistry, I am now 
+completing my Masters of Analytics at the University of San Francisco while working as a Data Scientist at Capital One Labs.</p>
 <p> </p>
